syntax = "proto3";
import './friend.proto';
package LoginPto;

//客户端请求登录
message C_LOGIN{
	int32 cmd = 1[default = 1]; 
	int32 scmd = 2[default = 1];
	string account = 3;
	string password = 4;
}

//服务端登录回应
message S_LOGIN{
	int32 cmd = 1[default = 1]; 
	int32 scmd = 2[default = 2];
	bool isSuccess = 3;
	string nick = 4;
	int32 headIndex = 5;
	int32 uid = 6;
	repeated Friend friendList = 7;
	repeated Friend reqAddList = 8;
}

//请求注册
message C_REGISTER {
	int32 cmd = 1[default = 1]; 
	int32 scmd = 2[default = 3];
	string account = 3;
	string password = 4;
	string nick = 5;
}

//注册返回
message S_REGISTER {
	int32 cmd = 1[default = 1]; 
	int32 scmd = 2[default = 4];
	int32 code = 3;// 0为成功 除0就是错误码
}

